refactor to Path in Area, Link, Thermal and Trajectory including unit tests